--- a/gb/20/8/13/n12327850.md
+++ b/gb/20/8/13/n12327850.md
@@ -1,18 +1,19 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/nzicfw3176/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/nzicfw3176/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/nzicfw3176/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/nzicfw3176/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/nzicfw3176/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/nzicfw3176/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/nzicfw3176/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/nzicfw3176/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/nzicfw3176/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/nzicfw3176/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/nzicfw3176/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/nzicfw3176/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/nzicfw3176/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/nzicfw3176/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/nzicfw3176/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/nzicfw3176/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/nzicfw3176/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/nzicfw3176/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/nzicfw3176/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/nzicfw3176/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/nzicfw3176/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/nzicfw3176/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/nzicfw3176/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/nzicfw3176/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/nzicfw3176/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/nzicfw3176/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/nzicfw3176/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/nzicfw3176/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/nzicfw3176/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/nzicfw3176/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/nzicfw3176/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/nzicfw3176/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/nzicfw3176/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/nzicfw3176/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/nzicfw3176/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/nzicfw3176/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/nzicfw3176/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/nzicfw3176/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/nzicfw3176/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/nzicfw3176/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/nzicfw3176/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/nzicfw3176/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/nzicfw3176/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/nzicfw3176/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/nzicfw3176/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/nzicfw3176/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/nzicfw3176/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>政院拍板“18岁成年”38项连动法案 男女婚龄18岁 2023年元旦上路</h2>
-
-<h6></h6>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>“18岁成年” 政院拟2023年生效</h2>
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2020/08/b89f4c92721041fd33ab8458b069135e-600x400.jpg" />
+<h6>现行法律的成年门槛调整为18岁，并设有两年缓冲期。图为参加考试的考生。（中央社）
+</h6>
 <hr>
-<p>【大纪元2020年08月13日讯】（大纪元记者李怡欣台湾台北报导）为因应《民法》<ahref="https://github.com/nzicfw3176/djy/blob/master/gb/tag/%E6%88%90%E5%B9%B4.md#1">成年</a>年龄下修为<ahref="https://github.com/nzicfw3176/djy/blob/master/gb/tag/18%E5%B2%81.md#1">18岁</a>，行政院院会13日通过38项《民法》修正法案，包括<ahref="https://github.com/nzicfw3176/djy/blob/master/gb/tag/%E7%BB%93%E5%A9%9A.md#1">结婚</a>年龄男女均为18岁，且基于权利义务对等原则，现行法律的<ahref="https://github.com/nzicfw3176/djy/blob/master/gb/tag/%E6%88%90%E5%B9%B4.md#1">成年</a>门槛也调整为18岁，并设有两年缓冲期，暂定2023年元旦上路。不过基于特殊考量，部分法规，如捐精、捐卵年龄仍维持20岁。</p>
-<figure id="attachment_12327852" style="width: 500px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/08/8e9b9cd0166d4698f19610ec49e2c783.jpg"><img class="wp-image-12327852" src="https://i.epochtimes.com/assets/uploads/2020/08/8e9b9cd0166d4698f19610ec49e2c783-300x215.jpg" alt="" width="500" b="358" /></a><figcaption class="wp-caption-text">政务委员罗秉成（图）。（中央社）</figcaption></figure>
+<p>【大纪元2020年08月13日讯】（大纪元记者李怡欣台湾台北报导）为因应《民法》<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%88%90%E5%B9%B4.md#1">成年</a>年龄下修为<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/18%E5%B2%81.md#1">18岁</a>，行政院院会13日通过38项《民法》修正法案，包括<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%BB%93%E5%A9%9A.md#1">结婚</a>年龄男女均为18岁，且基于权利义务对等原则，现行法律的<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%88%90%E5%B9%B4.md#1">成年</a>门槛也调整为18岁，并设有两年缓冲期，暂定2023年元旦上路。不过基于特殊考量，部分法规，如捐精、捐卵年龄仍维持20岁。</p>
+<figure id="attachment_12327852" aria-describedby="caption-attachment-12327852" style="width: 500px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/08/8e9b9cd0166d4698f19610ec49e2c783.jpg"><img class="wp-image-12327852" src="https://i.epochtimes.com/assets/uploads/2020/08/8e9b9cd0166d4698f19610ec49e2c783-300x215.jpg" alt="" width="500" b="358" /></a><figcaption id="caption-attachment-12327852" class="wp-caption-text">政务委员罗秉成（图）。（中央社）</figcaption></figure>
 <p>权益保障部分，在调降成年年龄前“已取得的权益”，如抚恤金、遗属年金、补助款、救助款、夫妻离婚后所约定对未成年子女之扶养费等亦保障持续享有至20岁，不溯及既往。</p>
-<p>法务部表示，修正重点包括，将成年年龄自20岁调降为<ahref="https://github.com/nzicfw3176/djy/blob/master/gb/tag/18%E5%B2%81.md#1">18岁</a>、男女平等<ahref="https://github.com/nzicfw3176/djy/blob/master/gb/tag/%E7%BB%93%E5%A9%9A.md#1">结婚</a>均为18岁、订婚17岁。（原定女结婚16岁、男18岁；女订婚15岁，男17岁）并将法律“年满20岁”、“成年”或“未成年”等门槛做连动修正。新法涉及14个部会，缓冲期2年，自立法院完成修法程序满2年后的第一个元旦施行，暂定施行日期为2023年1月1日。</p>
-<p>行政院长<ahref="https://github.com/nzicfw3176/djy/blob/master/gb/tag/%E8%8B%8F%E8%B4%9E%E6%98%8C.md#1">苏贞昌</a>指示，18岁公民权是国人高度共识，社会情况及国民成熟度已与91年前的《民法》大相径庭，经盘点后，一次修正到位、回应民意，18岁公民权修宪正在讨论中；因涉及民众权益法令众多，需2年缓冲期，相关法规命令、行政规则及其他配套措施等，请各主管机关及早因应准备，并积极与立法院沟通协调，早日完成修法程序。</p>
+<p>法务部表示，修正重点包括，将成年年龄自20岁调降为<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/18%E5%B2%81.md#1">18岁</a>、男女平等<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%BB%93%E5%A9%9A.md#1">结婚</a>均为18岁、订婚17岁。（原定女结婚16岁、男18岁；女订婚15岁，男17岁）并将法律“年满20岁”、“成年”或“未成年”等门槛做连动修正。新法涉及14个部会，缓冲期2年，自立法院完成修法程序满2年后的第一个元旦施行，暂定施行日期为2023年1月1日。</p>
+<p>行政院长<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E8%8B%8F%E8%B4%9E%E6%98%8C.md#1">苏贞昌</a>指示，18岁公民权是国人高度共识，社会情况及国民成熟度已与91年前的《民法》大相径庭，经盘点后，一次修正到位、回应民意，18岁公民权修宪正在讨论中；因涉及民众权益法令众多，需2年缓冲期，相关法规命令、行政规则及其他配套措施等，请各主管机关及早因应准备，并积极与立法院沟通协调，早日完成修法程序。</p>
 <p>行政院政务委员罗秉成表示，这次是包裹式提案，世界上有110个国家成年年龄为18岁，日本2018年也修法，将20岁成年下修为18岁，并设有4年过渡期，这是国际潮流与全民共识。</p>
-<figure id="attachment_12327854" style="width: 500px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/08/b89f4c92721041fd33ab8458b069135e.jpg"><img class="wp-image-12327854" src="https://i.epochtimes.com/assets/uploads/2020/08/b89f4c92721041fd33ab8458b069135e-300x218.jpg" alt="" width="500" b="364" /></a><figcaption class="wp-caption-text">现行法律的成年门槛调整为18岁，并设有两年缓冲期。图为参加考试的考生。（中央社）</figcaption></figure>
-<figure id="attachment_12327853" style="width: 500px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/08/692f644063036fd1594a493903feac6a.jpg"><img class="wp-image-12327853" src="https://i.epochtimes.com/assets/uploads/2020/08/692f644063036fd1594a493903feac6a-300x232.jpg" alt="" width="500" b="386" /></a><figcaption class="wp-caption-text">现行法律的成年门槛调整为18岁，并设有两年缓冲期。图为参加考试的考生。（中央社）</figcaption></figure>
+<figure id="attachment_12327854" aria-describedby="caption-attachment-12327854" style="width: 500px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/08/b89f4c92721041fd33ab8458b069135e.jpg"><img class="wp-image-12327854" src="https://i.epochtimes.com/assets/uploads/2020/08/b89f4c92721041fd33ab8458b069135e-300x218.jpg" alt="" width="500" b="364" /></a><figcaption id="caption-attachment-12327854" class="wp-caption-text">现行法律的成年门槛调整为18岁，并设有两年缓冲期。图为参加考试的考生。（中央社）</figcaption></figure>
+<figure id="attachment_12327853" aria-describedby="caption-attachment-12327853" style="width: 500px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/08/692f644063036fd1594a493903feac6a.jpg"><img class="wp-image-12327853" src="https://i.epochtimes.com/assets/uploads/2020/08/692f644063036fd1594a493903feac6a-300x232.jpg" alt="" width="500" b="386" /></a><figcaption id="caption-attachment-12327853" class="wp-caption-text">现行法律的成年门槛调整为18岁，并设有两年缓冲期。图为参加考试的考生。（中央社）</figcaption></figure>
 <p>罗秉成说，现行法律对《民法》成年年龄订为20岁，与《刑法》的刑事责任年龄订为18岁的完全责任年龄有落差，有点权责不相当，因此这次修法都统一为18岁。</p>
 <p>他也说，《国际人权公约》过去认为台湾现行女性18岁以下结婚，等于承认童婚，有必要终结此现象，且太早结婚影响青年就学、就业；未来18岁成年，可办手机、租买房、订契约、打诉讼、银行开户、办信用卡、担任公司发起人、董事等。</p>
 <p>此外，基于特殊考量，部分法规年龄不调降，例如捐赠生殖细胞年龄仍维持20岁，以及《国民法官法》规定，须年满23岁才能担任国民法官。◇</p>
@@ -22,42 +23,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/nzicfw3176/djy/blob/master/gb/17/6/9/n9243402.md#1">纽约州将终止童婚 法定结婚年龄提到18岁</a></li>
-<li><a href="https://github.com/nzicfw3176/djy/blob/master/gb/19/10/15/n11590114.md#1">青年权责不相符 民团：民法应下修18岁成年</a></li>
-<li><a href="https://github.com/nzicfw3176/djy/blob/master/gb/19/12/22/n11738800.md#1">18岁成年无共识  台学者：过度保护是限制</a></li>
-<li><a href="https://github.com/nzicfw3176/djy/blob/master/gb/19/12/22/n11738802.md#1">成年18还是20 台青民协：权责不符怪象多</a></li>
-<li><a href="https://github.com/nzicfw3176/djy/blob/master/gb/20/7/3/n12229601.md#1">加州公投18号提案：17岁可投初选票？</a></li>
-<li><a href="https://github.com/nzicfw3176/djy/blob/master/gb/20/8/10/n12320132.md#1">港警抓黎智英 苏贞昌：中共毁诺遭世界抨击</a></li>
-<li><a href="https://github.com/nzicfw3176/djy/blob/master/gb/20/8/13/n12327454.md#1">台湾经济部查获虾皮购物5件“伪MIT口罩”</a></li>
-<li><a href="https://github.com/nzicfw3176/djy/blob/master/gb/20/8/12/n12325453.md#1">大陆企业凭补助跟挖角 专家：难追上台积电</a></li>
-<li><a href="https://github.com/nzicfw3176/djy/blob/master/gb/20/8/12/n12325475.md#1">台湾逾4成议员赴中考察 学者：易成情搜目标</a></li>
-<li><a href="https://github.com/nzicfw3176/djy/blob/master/gb/20/8/12/n12325648.md#1">赴港后确诊台女在哪感染概率较高？陈时中回应</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/6/9/n9243402.md#1">纽约州将终止童婚 法定结婚年龄提到18岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/10/15/n11590114.md#1">青年权责不相符 民团：民法应下修18岁成年</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/12/22/n11738800.md#1">18岁成年无共识  台学者：过度保护是限制</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/12/22/n11738802.md#1">成年18还是20 台青民协：权责不符怪象多</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/7/3/n12229601.md#1">加州公投18号提案：17岁可投初选票？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/8/10/n12320132.md#1">港警抓黎智英 苏贞昌：中共毁诺遭世界抨击</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13616460.md#1">美不出兵援乌克兰 专家：台湾反而越安全</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13616463.md#1">台湾基进：今日俄罗斯 明日中共</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13616465.md#1">台外交部公布赈济乌克兰专户</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13616470.md#1">台海情势受关注 蔡英文：民主是唯一选项</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/4/27/n10343446.md#1" target="_blank">刘白：晚清张謇的幻想</a></li><li><a href="https://github.com/nzicfw3176/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/20/n11267735.md#1" target="_blank">庆法轮大法日 以色列女画家感悟大法指引方向</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/23/n10802534.md#1" target="_blank">韩丽明：游街</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/14/n11111708.md#1" target="_blank">美国务院人权新报告 多次提中共迫害法轮功</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/nzicfw3176/djy/blob/master/gb/20/8/11/n12322988.md#1">【有冇搞错】共机越中线 距战争爆发只差30秒</a></li>
-<li><a href="https://github.com/nzicfw3176/djy/blob/master/gb/20/8/11/n12323838.md#1">内斗猛烈 习误判局势 战狼术遭将领反对</a></li>
-<li><a href="https://github.com/nzicfw3176/djy/blob/master/gb/20/8/12/n12325133.md#1">遵美禁令 在港中资银行对林郑等采取措施</a></li>
-<li><a href="https://github.com/nzicfw3176/djy/blob/master/gb/20/8/12/n12325861.md#1">栗战书之女被曝在香港坐拥千万美元别墅</a></li>
-<li><a href="https://github.com/nzicfw3176/djy/blob/master/gb/20/8/11/n12322637.md#1">五眼联盟发表联合声明 分析：更是一份警告</a></li>
-<li><a href="https://github.com/nzicfw3176/djy/blob/master/gb/20/8/12/n12324696.md#1">罗霈颖死因出炉 为生前服用多种药物意外致死</a></li>
-<li><a href="https://github.com/nzicfw3176/djy/blob/master/gb/20/8/10/n12320539.md#1">林夕改编歌词赠罗冠聪 无知网军污蔑成笑柄</a></li>
-<li><a href="https://github.com/nzicfw3176/djy/blob/master/gb/20/8/10/n12320702.md#1">200港警搜查壹传媒 何韵诗等艺人发声谴责</a></li>
-<li><a href="https://github.com/nzicfw3176/djy/blob/master/gb/20/8/11/n12323294.md#1">与其他九人遭港警逮捕 周庭获日本艺文界声援</a></li>
-<li><a href="https://github.com/nzicfw3176/djy/blob/master/gb/20/8/11/n12323627.md#1">曾许愿妹妹投胎当女儿 具荷拉哥哥的女儿降生</a></li>
-<li><a href="https://github.com/nzicfw3176/djy/blob/master/gb/20/8/6/n12310782.md#1">顺天意民心退位让国 隆裕太后获盛赞</a></li>
-<li><a href="https://github.com/nzicfw3176/djy/blob/master/gb/11/1/4/n3132042.md#1">巴洛克艺术（三）鲁本斯</a></li>
-<li><a href="https://github.com/nzicfw3176/djy/blob/master/gb/20/5/22/n12129529.md#1">华盛顿将军系列故事：为了国家，请留下</a></li>
-<li><a href="https://github.com/nzicfw3176/djy/blob/master/gb/20/8/2/n12301784.md#1">不知“粒粒皆辛苦” 大臣奉命到民间历练</a></li>
-<li><a href="https://github.com/nzicfw3176/djy/blob/master/gb/20/8/11/n12322329.md#1">发明卡拉OK的日本人 为何不申请专利？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613897.md#1">【十字路口】锁链女遭拐卖凌虐 幕后大黑手曝光？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/nzicfw3176/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/nzicfw3176/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/8/13/n12327850.htm">政院拍板“18岁成年”38项连动法案 男女婚龄18岁 2023年元旦上路</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/8/13/n12327850.htm">“18岁成年” 政院拟2023年生效</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://www.szzd.org/v.php?action=qrcode&url=https://github.com/nzicfw3176/djy/blob/master/gb/20/8/13/n12327850.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/nzicfw3176/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nzicfw3176/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/nzicfw3176/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/nzicfw3176/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/nzicfw3176/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nzicfw3176/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/nzicfw3176/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nzicfw3176/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/nzicfw3176/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nzicfw3176/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/nzicfw3176/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nzicfw3176/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/nzicfw3176/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nzicfw3176/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/nzicfw3176/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nzicfw3176/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/nzicfw3176/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nzicfw3176/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/nzicfw3176/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nzicfw3176/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/nzicfw3176/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nzicfw3176/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/nzicfw3176/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nzicfw3176/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/nzicfw3176/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nzicfw3176/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/nzicfw3176/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nzicfw3176/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/nzicfw3176/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nzicfw3176/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/nzicfw3176/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nzicfw3176/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/nzicfw3176/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nzicfw3176/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/nzicfw3176/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nzicfw3176/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/nzicfw3176/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nzicfw3176/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/nzicfw3176/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nzicfw3176/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/nzicfw3176/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nzicfw3176/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/nzicfw3176/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nzicfw3176/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/nzicfw3176/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nzicfw3176/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/nzicfw3176/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nzicfw3176/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/20/8/13/n12327850.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
